# ezored

./: .gitignore  .travis.yml  Makefile  README.md  appveyor.yml  main.go  requirements.txt  setup.py
.pytest_cache/v/cache/: nodeids
assets/: bindata.go
bindata/init-command/: ezored-project.json
bindata/ios/: CMakeLists.txt
bindata/ios/files/: ios.cmake
commands/: base-command.go  build-command.go  clean-command.go  dependency-command.go  help-command.go  init-command.go
constants/: constants.go
docs/: DEPENDENCY.md  GET-STARTED.md  PROJECT.md  RELEASE-NOTES.md  TARGET.md  WORKFLOW-DEPENDENCY-INSTALL.md  WORKFLOW-DEPENDENCY-UPDATE.md  WORKFLOW-REPOSITORY-BUILD.md  WORKFLOW-REPOSITORY-DOWNLOAD.md  WORKFLOW-TARGET-BUILD.md  WORKFLOWS.md
ezored/: __init__.py  cli.py
ezored/commands/: __init__.py  base.py  clean.py  dependencies.py  dependency.py  hello.py  init.py  target.py
ezored/models/: constants.py  copy_file.py  dependency.py  logger.py  process_data.py  project.py  repository.py  source_file.py  source_group.py  target.py  target_data.py  task.py
ezored/models/util/: download_util.py  file_util.py  git_util.py  type_util.py
logger/: logger.go
models/: copy-file.go  process-data.go  project.go  repository.go  target-data.go  target-project.go  vendor.go
tests/: test_cli.py
tests/commands/: test_base.py  test_clean.py  test_dependency.py  test_hello.py  test_init.py  test_target.py
tests/models/: test_constants.py  test_dependency.py  test_logger.py  test_process_data.py  test_project.py  test_repository.py  test_repository_git.py  test_repository_local.py  test_repository_tar.py  test_repository_zip.py  test_source_file.py  test_target.py  test_task.py
tests/models/util/: test_download_util.py  test_file_util.py
utils/file-utils/: file-utils.go
utils/flag-utils/: flag-utils.go
utils/os-utils/: os-utils.go
